<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="100">

    <ImageView
        android:id="@+id/gitHubLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="70"
        android:src="@drawable/ic_github_logo"
        android:contentDescription="@string/github_logo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tokenEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:textSize="@dimen/base_text_size"
            android:hint="@string/token"
            android:autofillHints="token"
            android:inputType="text"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearEditText_button"
            style="@style/Widget.AppTheme.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_clear_edit_text" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/sign_in"
        android:textSize="@dimen/base_text_size" />

</LinearLayout>
